Fix #257 Apply full width to spin outside of table so that the table overflows only within itself.

--- a/src/client/stylesheets/main.scss
+++ b/src/client/stylesheets/main.scss
@@ -196,3 +196,11 @@
     margin-bottom: 1.7em !important;
   }
 }
+
+.ant-table td {
+  white-space: nowrap;
+}
+
+.full-width-spin-preloader {
+  width: 100%;
+}
